<resources>
    <string name="app_name">Course Searching app</string>
    <string name="course_registration">Course Registration</string>
    <string name="jj">jj</string>
    <string name="_800">800</string>
    <string name="fee">Fee</string>
    <string name="java">java</string>
    <string name="course">Course</string>
    <string name="aji">Aji</string>
    <string name="name">Name</string>
    <string name="view">view</string>
    <string name="ok">ok</string>
    <string name="_1">1</string>
    <string name="id">ID</string>
    <string name="back">back</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="enter_your_name">Enter Your Name</string>
</resources>