<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".edit">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_registration"
            android:textColor="@color/purple_700"
            android:layout_marginTop="80dp"
            android:textSize="40sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:id="@+id/id"
            android:text="@string/_1"
            android:textAlignment="center"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:id="@+id/name"
            android:text="@string/aji"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:id="@+id/course"
            android:text="@string/java"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fee"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/_800"
            android:id="@+id/Fee"
            android:textAlignment="center"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn1"
            android:text="@string/edit"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn2"
            android:text="@string/delete"
            android:backgroundTint="@color/black"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn3"
            android:text="@string/back"
            android:backgroundTint="#D82A2A"
            android:layout_marginTop="10dp"/>


    </LinearLayout>


</LinearLayout>